fix more broken shit part 2

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -64,9 +64,14 @@ jobs:
       - name: Smoke test (200 OK)
         run: |
           sleep 5
-          CODE=$(kubectl run curl --image=curlimages/curl:8.8.0 --restart=Never --rm -i -- \
-            sh -lc 'curl -s -o /dev/null -w "%{http_code}" http://myapp.default.svc.cluster.local/')
-          echo "HTTP CODE: $CODE"; test "$CODE" = "200"
+          RAW=$(
+            kubectl run curl --image=curlimages/curl:8.8.0 --restart=Never --rm -i -- \
+              sh -lc 'curl -s -o /dev/null -w "%{http_code}" http://myapp.default.svc.cluster.local/'
+          )
+          CODE=$(echo "$RAW" | grep -Eo '[0-9]{3}' | tail -1)
+          echo "RAW: $RAW"
+          echo "HTTP CODE: $CODE"
+          test "$CODE" = "200"
 
 
       - name: Diagnostics (pods, logs, events)
