--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,8 +11,76 @@ jobs:
 
     permissions:
       contents: read
+      packages: write # needed to push to GHCR
 
-    steps:
+      env:
+        IMAGE_NAME: myapp
+        REGISTRY: ghcr.io
+        OWNER: ${{ github.repository_owner }}
+        TAG: ${{ github.sha }}
+
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+
+        - name: Start Minikube
+          uses: medyagh/setup-minikube@v0.0.15
+          with:
+            driver: docker
+            kubernetes-version: v1.30.0
+            start-args: "--addons=ingress,metrics-server"
+
+        - name Docker login (GHCR)
+          run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+
+        - name: Build & push image to GHCR
+          run: |
+            IMAGE="$REGISTRY/$OWNER/$IMAGE_NAME:$TAG"
+            docker build -t "$IMAGE" .
+            docker push "$IMAGE"
+            # capture digest for pinning
+            FULL=$(docker inspect --format='{{index .RepoDigests 0}}' "$IMAGE")
+            echo "FULL=$FULL" >> $GITHUB_ENV
+            echo "DIGEST=${FULL#*@}" >> $GITHUB_ENV
+            echo "PUBLISHED=$FULL"
+  
+        # Render a temp kustomize overlay that pins the digest
+        - name: Apply DEV overlay pinned by digest
+          run: |
+            mkdir -p .tmp/dev
+            cat > .tmp/dev/kustomization.yaml <<EOF
+          resources:
+                - ../../k8s/overlays/dev
+          images:
+            - name: myapp
+              newName: $REGISTRY/$OWNER/$IMAGE_NAME
+              digest: $DIGEST
+          EOF
+          kubectl apply -k .tmp/dev
+          kubectl rollout status deploy/myapp --timeout=120s
+
+        - name: Verify image digest in running pods
+          run: |
+            POD=$(kubectl get pods -l app=myapp -o jsonpath='{.items[0].metadata.name}')
+            IMG=$(kubectl get pod "$POD" -o jsonpath='{.spec.containers[0].image}')
+            echo "Pod image: $IMG"   # should be ghcr.io/...@sha256:*
+
+        - name: Apply STAGE overlay pinned by digest
+          if: github.ref == 'refs/heads/stage'
+          run: |
+            mkdir -p .tmp/stage
+            cat > .tmp/stage/kustomization.yaml <<EOF
+          resources:
+            - ../../k8s/overlays/stage
+          images:
+            - name: myapp
+              newName: $REGISTRY/$OWNER/$IMAGE_NAME
+              digest: $DIGEST
+          EOF
+          kubectl apply -k .tmp/stage
+          kubectl rollout status deploy/myapp --timeout=120s
+
+      steps:
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -22,7 +90,7 @@ jobs:
         with:
           driver: docker
           kubernetes-version: v1.30.0
-          start-args: "--addons=ingress"
+          start-args: "--addons=ingress,metrics-server"
 
       - name: Verify cluster
         run: |
