--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -30,7 +30,7 @@ jobs:
             kubernetes-version: v1.30.0
             start-args: "--addons=ingress,metrics-server"
 
-        - name Docker login (GHCR)
+        - name: Docker login (GHCR)
           run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
         - name: Build & push image to GHCR
