another update to fix GHCR push part 3

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write   # needed to push to GHCR
-
+      packages: write
     env:
       IMAGE_NAME: myapp
       REGISTRY: ghcr.io
