--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -2,8 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: myapp
-  labels:
-    app: myapp
 spec:
   replicas: 1
   selector:
@@ -14,50 +12,36 @@ spec:
       labels:
         app: myapp
     spec:
+      # optional if your GHCR package is private and you created the secret
+      imagePullSecrets:
+        - name: ghcr-pull
       containers:
         - name: myapp
-          image: myapp            # CI replaces this (myapp:<short-sha>)
-          imagePullPolicy: Never              # use image loaded into Minikube
+          image: myapp          # kustomize will replace by digest
           ports:
             - containerPort: 8080
-          command:
-            - sh
-            - -lc
-            - uvicorn app.main:app --host 0.0.0.0 --port 8080
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 8080
-            initialDelaySeconds: 25
-            periodSeconds: 5
-            failureThreshold: 12
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 8080
-            initialDelaySeconds: 40
-            periodSeconds: 10
-            failureThreshold: 6
+          # ✅ envFrom / env must be inside the container
+          envFrom:
+            - configMapRef:
+                name: myapp-config
+          env:
+            - name: SECRET_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: myapp-secrets
+                  key: SECRET_TOKEN
+          # (optional) your probes/resources
           resources:
             requests:
-              cpu: 50m
+              cpu: 10m
               memory: 64Mi
             limits:
               cpu: 200m
               memory: 256Mi
-        - name: SECRET_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: myapp-secrets
-              key: SECRET_TOKEN
-      envFrom:
-        - configMapRef:
-            name: myapp-config
-      eng:
-        - name: SECRET_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: myapp-secrets
-              key: SECRET_TOKEN
-      restartPolicy: Always
+          readinessProbe:
+            httpGet: { path: "/", port: 8080 }
+            initialDelaySeconds: 2
+          livenessProbe:
+            httpGet: { path: "/", port: 8080 }
+            initialDelaySeconds: 5
 
