--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,6 +1,8 @@
 resources:
   - deployment.yaml
   - service.yaml
-  # - ingress.yaml
-  # - configmap.yaml
+  - ingress.yaml
+  - clusterissuer.yaml
+  - certificate.yaml
+  - configmap.yaml
 
