--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -105,6 +105,7 @@ jobs:
           kubectl run curl --image=curlimages/curl:8.8.0 --restart=Never --rm -i -- \
             sh -lc 'curl -ks -H "Host: myapp.local" https://'"$IP"'/' || true
 
+      # stage namespace step
       - name: Ensure stage namespace
         if: ${{ github.ref == 'refs/heads/stage' }}
         run: kubectl create ns stage --dry-run=client -o yaml | kubectl apply -f -
