chore: remove legacy workflow 1

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -2,7 +2,7 @@ name: Build & Deploy to Minikube
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, stage ]
   workflow_dispatch:
 
 jobs:
