--- a/k8s/base/service.yaml
+++ b/k8s/base/service.yaml
@@ -3,9 +3,9 @@ kind: Service
 metadata:
   name: myapp
 spec:
-  type: ClusterIP
   selector: { app: myapp }
   ports:
-    - port: 80
+    - name: http
+      port: 80
       targetPort: 8080
 
