--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -2,7 +2,7 @@ name: Build & Deploy to Minikube
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, stage ]
   workflow_dispatch:
 
 jobs:
@@ -27,6 +27,33 @@ jobs:
           driver: docker
           kubernetes-version: v1.30.0
           start-args: "--addons=ingress,metrics-server"
+
+      # Setup Helm (once per job)
+      - name: Set up Helm
+        uses: azure/setup-helm@v4
+
+      # Install Prometheus + Grafana (kube-prometheus-stack)
+      - name: Install kube-prometheus-stack (Prometheus + Grafana)
+        run: |
+          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+          helm repo update
+          helm upgrade --install kps prometheus-community/kube-prometheus-stack \
+            -n monitoring --create-namespace --wait
+          kubectl get pods -n monitoring
+
+      # Apply your monitoring resources (ServiceMonitor, rules, optional dashboard)
+      - name: Apply monitoring resources
+        run: |
+          kubectl apply -f k8s/monitoring/servicemonitor-myapp.yaml
+          kubectl apply -f k8s/monitoring/prometheus-rule.yaml
+          # optional dashboard; comment out if you didn’t add it:
+          kubectl apply -f k8s/monitoring/grafana-dashboard.yaml || true
+
+      # Quick verification: synthetic alert present in Prometheus API
+      - name: Verify Synthetic alert firing
+        run: |
+          kubectl run curlmon --image=curlimages/curl:8.8.0 -n monitoring --restart=Never --rm -i -- \
+            sh -lc 'curl -s http://kps-prometheus.monitoring.svc.cluster.local:9090/api/v1/alerts | tee /dev/stderr | grep -q SyntheticAlwaysFiring'
 
       - name: Docker login (GHCR)
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
